[gd_scene load_steps=3 format=3 uid="uid://ymlghmnnfluj"]

[ext_resource type="Script" path="res://Scripts/Menu/Menu.gd" id="1_1mb6r"]
[ext_resource type="Texture2D" uid="uid://6ubn87ysy1fe" path="res://Art/Main_menu.png" id="2_1qjbn"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mb6r")

[node name="MainMenu" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(480, 270)
texture = ExtResource("2_1qjbn")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 147.0
offset_right = 609.0
offset_bottom = 219.0
text = "Play"
flat = true

[node name="levels" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 228.0
offset_right = 609.0
offset_bottom = 300.0
text = "Levels
"
flat = true

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 389.0
offset_right = 609.0
offset_bottom = 461.0
text = "Quit"
flat = true

[node name="control" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 309.0
offset_right = 609.0
offset_bottom = 381.0
text = "Control
"
flat = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="control" to="." method="_on_control_pressed"]
